--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,6 +11,7 @@ $color-gray-2: #4f4f4f;
 $color-gray-3: #828282;
 $color-gray-4: #bdbdbd;
 $color-gray-5: #e0e0e0;
+$color-gray-6: #f2f2f2;
 
 $color-blue: #2d9cdb;
 $color-green: #27AE60;
