--- a/scss/_root.scss
+++ b/scss/_root.scss
@@ -5,4 +5,5 @@
     color: variables.$color-gray-1;
     font-weight: 500;
     background-color: variables.$color-white;
+    scroll-behavior: smooth;
 }
