--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,8 @@
 @use './partials/home';
 @use './partials/services';
 @use './partials/our-works';
+@use './partials/clients';
+@use './partials/comments';
 
 @use './mixins/display';
 @use './functions/converts';
