--- a/scss/partials/_our-works.scss
+++ b/scss/partials/_our-works.scss
@@ -11,7 +11,7 @@
     );
     margin: 0 auto;
     width: 90%;
-    min-height: 100vh;
+    margin-top: 2rem;
     padding: converts.pixels-rem(40) 0 converts.pixels-rem(32);
     position: relative;
 
