--- a/scss/partials/_services.scss
+++ b/scss/partials/_services.scss
@@ -11,19 +11,21 @@
     );
     margin: 0 auto;
     width: 90%;
-    min-height: 85vh;
+    //min-height: 85vh;
     padding: converts.pixels-rem(16) 0;
+    margin-top: 3rem;
+
+    @media screen and (min-width:1200px) {
+        &{
+            height: 560px;
+        }
+    }
 
     @media screen and (max-width: 840px){
         &{
             width: 100%;
         }
     }
-
-    @media screen and (max-height: 900px) {
-        min-height: 100vh;
-    }
-
 
     & > .main{
         @include font.font($text-transform: none);
