--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,14 @@ table {
   align-items: center;
   gap: 1rem;
   flex: 0 1 auto;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+@media screen and (max-width: 748px) {
+  .header {
+    padding: 0 0.5rem;
+  }
 }
 .header-logo {
   font-family: "Heebo", sans-serif;
@@ -97,6 +105,7 @@ table {
   line-height: 3.3125rem;
   text-transform: none;
   color: #333333;
+  cursor: default;
   display: flex;
   flex-flow: row nowrap;
   justify-content: start;
@@ -293,62 +302,97 @@ table {
   }
 }
 
-.scroll-bar {
-  position: fixed;
-  top: 0;
-  right: 0;
-  height: 100vh;
-  width: 0.8rem;
-}
-.scroll-bar > .scroll-bar-nav {
-  height: 100%;
-}
-.scroll-bar > .scroll-bar-nav > .items {
+.return-to-up {
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 0rem;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
   flex: 0 1 auto;
-  height: 100%;
-  width: 100%;
+  border-radius: 100rem;
+  height: 3rem;
+  width: 3rem;
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+  background-color: #ffffff;
+  z-index: 3;
+  transform: translate(1000px, 1000px) skew(80deg, 10deg);
+  transform-origin: 0% 100%;
 }
-.scroll-bar > .scroll-bar-nav > .items > li {
-  width: 100%;
-  height: 100%;
-  flex-grow: 1;
-  position: relative;
-}
-.scroll-bar > .scroll-bar-nav > .items .item {
-  font-family: "Poppins", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 1rem;
-  line-height: 1.25rem;
-  text-transform: capitalize;
-  color: #ffffff;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  text-decoration: none;
-  writing-mode: vertical-rl;
+.return-to-up::before {
+  content: "return to up";
+  padding: 0.5rem;
+  border-radius: 0.75rem;
+  background-color: #bdbdbd;
   white-space: nowrap;
-  background: #f2f2f2;
-  border-radius: 0.5rem 0 0 0.5rem;
-}
-.scroll-bar > .scroll-bar-nav > .items .item2 {
   position: absolute;
-  top: 0;
-  right: 0rem;
-  bottom: 0;
-  left: -0.5rem;
-  background: #2d9cdb;
-  filter: contrast(200%);
-  border-radius: 1rem 0 0 1rem;
+  right: -1.6rem;
+  top: -2.5rem;
+  color: #ffffff;
+  opacity: 0;
+  transform-origin: center;
+  transform: translatey(3rem);
+  filter: blur(3px);
+  pointer-events: none;
+  transition: all 0.3s ease;
+}
+.return-to-up:hover::before {
+  opacity: 1;
+  transform: translatey(0rem);
+  filter: blur(0px);
+}
+.return-to-up:hover::before:hover {
+  opacity: 1;
+}
+.return-to-up .arrow-up-icon {
+  font-size: 2rem;
+}
+@media screen and (max-width: 480px) {
+  .return-to-up {
+    bottom: 1.5rem;
+    right: 1.5rem;
+  }
 }
 
+.slide-in-blurred-br {
+  animation: slide-in-blurred-br 0.4s cubic-bezier(0.23, 1, 0.32, 1) both;
+  animation-delay: 0.2s;
+}
+
+.slide-out-blurred-br {
+  animation: slide-out-blurred-br 0.45s cubic-bezier(0.755, 0.05, 0.855, 0.06) both;
+}
+
+@keyframes slide-in-blurred-br {
+  0% {
+    transform: translate(1000px, 1000px) skew(80deg, 10deg);
+    transform-origin: 0% 100%;
+    filter: blur(40px);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(0, 0) skew(0deg, 0deg);
+    transform-origin: 50% 50%;
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-out-blurred-br {
+  0% {
+    transform: translate(0, 0) skew(0deg, 0deg);
+    transform-origin: 50% 50%;
+    filter: blur(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(1000px, 1000px) skew(80deg, 10deg);
+    transform-origin: 0% 100%;
+    filter: blur(40px);
+    opacity: 0;
+  }
+}
 .home {
   display: flex;
   flex-flow: column nowrap;
@@ -718,6 +762,7 @@ table {
   text-transform: none;
   color: #4f4f4f;
   max-width: 17.0625rem;
+  height: 144px;
 }
 .services > .cards > .card > .started {
   font-family: "Poppins", sans-serif;
@@ -1079,7 +1124,7 @@ table {
   line-height: 1.5rem;
   text-transform: none;
   color: #4f4f4f;
-  width: 17.5rem;
+  width: 20rem;
 }
 @media screen and (max-width: 748px) {
   .clients > .text-container > .support {
@@ -1163,8 +1208,8 @@ table {
   width: 90%;
   position: relative;
   padding: 1rem 0;
-  max-height: 40rem;
-  margin-top: 4rem;
+  max-height: 40.625rem;
+  margin: 5rem 0 10rem;
 }
 @media screen and (max-width: 840px) {
   .comments {
@@ -1261,20 +1306,263 @@ table {
   }
 }
 
-body {
+.footer {
+  background-color: #100E1D;
+  padding: 2rem 0 0.5rem;
+}
+.footer > .container {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 6.875rem;
+  flex: 0 1 auto;
+  height: 100%;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 0;
+  padding: 0 2rem;
 }
-@media screen and (max-width: 1304px) {
-  body {
-    padding: 0 2rem;
+@media screen and (max-width: 748px) {
+  .footer > .container {
+    padding: 0 0.5rem;
+  }
+}
+.footer > .container > .footer__content {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 1rem;
+  flex: 0 1 auto;
+  width: 100%;
+  margin-left: 0;
+}
+@media screen and (max-width: 748px) {
+  .footer > .container > .footer__content {
+    flex-flow: column nowrap;
+    justify-content: start;
+    gap: 2rem;
+    margin-left: 6.25rem;
+    width: unset;
+    align-self: flex-start;
+  }
+}
+@media screen and (max-width: 560px) {
+  .footer > .container > .footer__content {
+    margin-left: 1.875rem;
+  }
+}
+@media screen and (max-width: 320px) {
+  .footer > .container > .footer__content {
+    margin-left: 0.9375rem;
+  }
+}
+.footer > .container > .footer__content > .footer-nav > .items {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: start;
+  align-items: flex-start;
+  gap: 0rem;
+  flex: 0 1 auto;
+}
+.footer > .container > .footer__content > .footer-nav > .items .item {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.125rem;
+  line-height: 2.25rem;
+  text-transform: capitalize;
+  color: #f2f2f2;
+  text-decoration: none;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: color;
+  position: relative;
+}
+.footer > .container > .footer__content > .footer-nav > .items .item::after {
+  content: "";
+  pointer-events: none;
+  bottom: 0px;
+  left: 50%;
+  position: absolute;
+  width: 0%;
+  height: 0.125rem;
+  background-color: #f2f2f2;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: width, left;
+}
+.footer > .container > .footer__content > .footer-nav > .items .item:hover::after {
+  width: 100%;
+  left: 0%;
+}
+.footer > .container > .footer__content > .social-media {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: start;
+  align-items: flex-start;
+  gap: 0.75rem;
+  flex: 0 1 auto;
+  width: 300px;
+}
+@media screen and (max-width: 1080px) {
+  .footer > .container > .footer__content > .social-media {
+    width: unset;
+  }
+}
+.footer > .container > .footer__content > .social-media > .social-media__logo {
+  font-family: "Heebo", sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 2.25rem;
+  line-height: 3.3125rem;
+  text-transform: none;
+  color: #f2f2f2;
+  cursor: default;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: start;
+  align-items: flex-start;
+  gap: 0rem;
+  flex: 0 1 auto;
+}
+.footer > .container > .footer__content > .social-media > .social-media__logo > .jello {
+  animation: jello-vertical 0.9s both;
+}
+.footer > .container > .footer__content > .social-media > .social-media__container {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: start;
+  align-items: flex-start;
+  gap: 0.75rem;
+  flex: 0 1 auto;
+}
+.footer > .container > .footer__content > .social-media > .social-media__container > a:hover .social-media__logo {
+  transform: translateY(-0.5rem);
+}
+.footer > .container > .footer__content > .social-media > .social-media__container > a > .social-media__logo {
+  transition: all 0.3s ease;
+}
+.footer > .container > .footer__content > .social-media > .social-media__container > a > .social-media__logo:hover {
+  transform: translateY(-0.5rem);
+}
+.footer > .container > .footer__content > .contact-email {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 1rem;
+  flex: 0 1 auto;
+  width: 22.875rem;
+  margin-right: 6rem;
+}
+@media screen and (max-width: 920px) {
+  .footer > .container > .footer__content > .contact-email {
+    margin-right: 2rem;
   }
 }
 @media screen and (max-width: 748px) {
-  body {
-    padding: 0 0.5rem;
+  .footer > .container > .footer__content > .contact-email {
+    width: 100%;
   }
+}
+.footer > .container > .footer__content > .contact-email > .label {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 0.875rem;
+  line-height: 1.3125rem;
+  text-transform: initial;
+  color: #f2f2f2;
+}
+@media screen and (max-width: 748px) {
+  .footer > .container > .footer__content > .contact-email > .label {
+    font-size: 0.625rem;
+    line-height: 0.9375rem;
+  }
+}
+.footer > .container > .footer__content > .contact-email > .email-container {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.5rem;
+  flex: 0 1 auto;
+  width: calc(100% - 1rem);
+  padding: 0.25rem;
+  padding-left: 0.75rem;
+  background: #f2f2f2;
+  border-radius: 0.75rem;
+}
+.footer > .container > .footer__content > .contact-email > .email-container > .email-input {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.125rem;
+  line-height: 1.6875rem;
+  text-transform: initial;
+  color: #4f4f4f;
+  flex-grow: 1;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  width: 100%;
+}
+.footer > .container > .footer__content > .contact-email > .email-container > .email-input::placeholder {
+  color: #bdbdbd;
+}
+@media screen and (max-width: 748px) {
+  .footer > .container > .footer__content > .contact-email > .email-container > .email-input {
+    font-size: 0.875rem;
+    line-height: 1.3125rem;
+  }
+}
+.footer > .container > .footer__content > .contact-email > .email-container > .join {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.125rem;
+  line-height: 1.6875rem;
+  text-transform: initial;
+  color: #f2f2f2;
+  cursor: pointer;
+  background: #2d9cdb;
+  border-radius: 0.75rem;
+  border: none;
+  padding: 0.6875rem 1.6875rem;
+  transition: all 0.3s ease;
+}
+.footer > .container > .footer__content > .contact-email > .email-container > .join:hover {
+  filter: contrast(200%);
+}
+@media screen and (max-width: 748px) {
+  .footer > .container > .footer__content > .contact-email > .email-container > .join {
+    font-size: 0.875rem;
+    line-height: 1.3125rem;
+  }
+}
+.footer > .container > .text-footer {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 0.875rem;
+  line-height: 1.0625rem;
+  text-transform: none;
+  color: #f2f2f2;
+}
+.footer > .container > .text-footer > .strong {
+  font-weight: 700;
+  color: #f2f2f2;
+  filter: contrast(200%);
+  transition: 0.3s all ease;
+}
+.footer > .container > .text-footer > .strong:hover {
+  color: #2d9cdb;
+}
+
+body {
+  margin: 0;
+  padding: 0 0;
 }
 body .scroll-body {
   overflow: hidden;
@@ -1286,15 +1574,29 @@ body > main {
   align-items: flex-start;
   gap: 1rem;
   flex: 0 1 auto;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 0;
+}
+@media screen and (max-width: 1304px) {
+  body > main {
+    padding: 0 2rem;
+  }
+}
+@media screen and (max-width: 748px) {
+  body > main {
+    padding: 0 0.5rem;
+  }
 }
 
 ::-webkit-scrollbar {
   width: 0.5rem;
   background-color: transparent;
+  transition: all 1s linear;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #e0e0e0;
+  background-color: #bdbdbd;
   border-radius: 16px;
 }
 
