--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -11,6 +11,16 @@
         $align-items: center
     );
 
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 2rem;
+
+    @media screen and (max-width: 748px){
+        &{
+            padding: 0 0.5rem;
+        }
+    }
+
     &-logo{
         @include font.font(
             $font-family: variables.$font-title, 
@@ -18,6 +28,7 @@
             $line-height: 53, 
             $text-transform: none,
         );
+        cursor: default;
 
         @include display.flex(
             $gap:0
