--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,6 +34,7 @@ body{
             max-width: 1200px;
             margin: 0 auto;
             padding: 0 0;
+            overflow-x: hidden;
 
             @media screen and (max-width: 1304px){
                 &{
