--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -1,5 +1,6 @@
 @use 'variables';
 
+/* A CSS class that is used to style the icon. */
 .material-icons-round {
     font-family: 'Material Icons Round';
     font-weight: normal;
