--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,11 +1,10 @@
-/*FONT*/
+/* Defining the fonts that will be used in the project. */
 $font-title: 'Heebo', sans-serif;
 $font-footer: 'Montserrat', sans-serif;
 $font-family: 'Poppins', sans-serif;
-/*END FONT*/
 
 
-/*COLORS*/
+/* Defining the colors that will be used in the project. */
 $color-gray-1: #333333;
 $color-gray-2: #4f4f4f;
 $color-gray-3: #828282;
@@ -20,4 +19,3 @@ $color-red: #EB5757;
 $color-white: #ffffff;
 $color-footer: #100E1D;
 
-/*END COLORS*/
