--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,6 +18,7 @@
 @use './mixins/display';
 @use './functions/converts';
 
+
 body{
     margin: 0;
     padding: 0 0;
@@ -50,6 +51,7 @@ body{
     }
 }
 
+/* A CSS rule that hides the scrollbar on Chrome and Safari. */
 ::-webkit-scrollbar {
     width: 0.5rem;
     background-color: transparent;
