MOD: User-select: none

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,6 +26,7 @@ body{
     .scroll-body{
         overflow: hidden;
     }
+    user-select: none;
 
     & > main{
         @include display.flex(
